--- a/ReadMe
+++ b/ReadMe
@@ -6,15 +6,4 @@
  |_|    |_|\___|\__,_|___/\___| |_| |_|\___/ \__|_|\___\___| |_| |_| |_|\___| |___/\___|_| |_| .__/ \__,_|_(_)
                                                                                              | |              
                                                                                              |_|              
-Mose of these scripts aren't mine, like the sus menu or bird wings.
-
-           _                         _   _          _ 
-     /\   | |                       | | (_)        | |
-    /  \  | |___  ___    _ __   ___ | |_ _  ___ ___| |
-   / /\ \ | / __|/ _ \  | '_ \ / _ \| __| |/ __/ _ \ |
-  / ____ \| \__ \ (_) | | | | | (_) | |_| | (_|  __/_|
- /_/    \_\_|___/\___/  |_| |_|\___/ \__|_|\___\___(_)
-
-I have a YouTube channel, @BiockyDragonHead
-
----> https://www.youtube.com/@BIockyDragonHead <---
+Mose of these scripts aren't mine, SO PLEASE CREDIT THE ORIGINAL CREATOR!!!!!!!!!!!
